# data-collector

./: .gitignore  README.md  cricket_in_hindi.txt  cricket_in_hindi_t.txt  download_config.yaml  main.py  percent_match.json  percent_match_1.json  pyproject.toml  sample.ipynb  similarity.json  similarity_1.json  temp.ipynb  trans.json  transt.json
app/: audio_processor.py  data_retrival.py  data_validator.py  models.py  nemo.py  nemo_model.py  trascription_utils.py  whisper_model.py
app/configs/: download.yaml
app/configs/asr_provider/: nemo.yaml
app/configs/speech_language_detection/: whisper.yaml
app/data_instances/: download_config.py  video_meta.py
app/db/: connection.py  db_functions.py  url_model.py  video_metadata_model.py
app/models/asr/: __init__.py  asr.py  nemo_model.py
app/models/speech_language_detection/: __init__.py  speech_language_detection.py  whisper_model.py
app/tools/: youtube_analyse.sql
app/utils/: common_utils.py  date_utils.py  file_utils.py  transcription_utils.py
