[tool.poetry]
name = "collect-data"
version = "0.1.0"
description = ""
authors = ["munikumar"]

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
youtube-search-python = "^1.6.6"
yt-dlp = "^2023.12.30"
openai-whisper = "^20231117"
youtube-transcript-api = "^0.6.2"
sqlmodel = "^0.0.14"
hydra-core = "^1.3.2"
Cython = "^3.0.8"
nemo-toolkit = {extras = ["asr"], version = "^1.22.0"}
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl" }
torchaudio = {url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl" }
registrable = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
